improved 10% behavior and options

--- a/sketchpadJs/index.html
+++ b/sketchpadJs/index.html
@@ -15,28 +15,27 @@
 				id="primary"
     			class="jscolor {valueElement:null,value:'fff'}"
     			style="border:2px solid black">
-    			Pick the Primary color
+    			Pick the background color
 			</button></br>
-			(Color updated after reset)
+			<button id="backColor">Update the Background Color</button>
 			</p>
 
 		<p class="colorPicker"><button
 				id="secondary"
     			class="jscolor {valueElement:null,value:'000'}"
     			style="border:2px solid black">
-    			Pick the Secondary color
+    			Pick the painting color
 			</button></br>
-			(Live update for next moves)
 			</p>
 
 		<p class="random">Or use random colors : <input type="checkbox" id="randomCheck" name="randomColors"></p>
 
 		<p class="opacity">10% opacity : <input type="checkbox" id="opacityCheck" name="opacity"></p>
-		<p class="hint">(This will reset the grid with the same size and disable the other options)</p>
+		<p class="hint">(Incremental)</p>
 
 		<p class="gridInfo"></p>
 
-		<button id="clear">Reset</button>
+		<button id="clear">Reset Grid Size</button>
 
 		</div>
 
